--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
   ],
   "devDependencies": {
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.507.0",
+    "tailwind-merge": "^3.2.0"
   }
 }
