--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@sanity/types": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.507.0",
     "tailwind-merge": "^3.2.0"
