--- a/studio/package.json
+++ b/studio/package.json
@@ -16,15 +16,18 @@
     "sanity"
   ],
   "dependencies": {
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
     "@sanity/assist": "^3.2.0",
     "@sanity/icons": "^3.5.0",
-    "@sanity/vision": "^4.1.0",
+    "@sanity/vision": "^4.3.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.23.12",
     "pluralize-esm": "^9.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "^7.8.1",
-    "sanity": "^4.1.0",
+    "sanity": "^4.3.0",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "styled-components": "^6.1.19"
   },
