--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.4",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.9",
     "@sanity/types": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.507.0",
-    "tailwind-merge": "^3.2.0"
+    "react-hook-form": "^7.62.0",
+    "resend": "^6.0.1",
+    "tailwind-merge": "^3.2.0",
+    "zod": "^4.1.3"
   }
 }
