--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@sanity/types": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.507.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
     "resend": "^6.0.1",
     "tailwind-merge": "^3.2.0",
