--- a/deestincts/package.json
+++ b/deestincts/package.json
@@ -11,6 +11,7 @@
     "typegen": "sanity typegen generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-hover-card": "^1.1.14",
@@ -38,7 +39,8 @@
     "resend": "^4.7.0",
     "sanity": "^3.76.1",
     "sonner": "^1.7.0",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.17.17",
