--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@paystack/inline-js": "^2.22.7",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -35,8 +36,10 @@
     "@sanity/types": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.507.0",
+    "motion": "^12.33.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
+    "react-paystack": "^6.0.0",
     "resend": "^6.0.1",
     "tailwind-merge": "^3.2.0",
     "zod": "^4.1.3"
