--- a/deestincts/package.json
+++ b/deestincts/package.json
@@ -32,7 +32,7 @@
     "autoprefixer": "^10.4.20",
     "date-fns": "^3.6.0",
     "motion": "^12.33.0",
-    "next": "^15.1.6",
+    "next": "15.1.11",
     "next-sanity": "^9.8.42",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
