--- a/deestincts/package.json
+++ b/deestincts/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^1.0.7",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "@sanity/client": "^6.27.2",
@@ -37,6 +38,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^5.2.8",
     "react-hook-form": "^7.60.0",
     "redis": "^5.10.0",
     "resend": "^4.7.0",
